--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,9 +2,14 @@ pipeline {
   agent {
     docker {
       image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+      args 'args -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
   }
+
+options {
+    skipDefaultCheckout()
+}
+
 
   stages {
     stage('Clean Workspace') {
@@ -14,6 +19,7 @@ pipeline {
     }
     stage('Checkout') {
       steps {
+        checkout scm    
         sh 'echo passed'
         //git branch: 'main', url: 'https://github.com/SaadTAhmad/Application-Repo.git'
       }
