--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -30,7 +30,7 @@ options {
         // build the project and create a JAR file
         sh 'cd java-maven-sonar-argocd-helm-k8s/spring-boot-app'
         sh 'ls -ltr'
-        sh 'mvn clean package''
+        sh 'mvn clean package'
       }
     }
     stage('Static Code Analysis') {
