Disable echo command in Jenkinsfile
Comment out the echo command in the Checkout stage.

--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -20,7 +20,7 @@ options {
     stage('Checkout') {
       steps {
         checkout scm    
-        sh 'echo passed'
+        //sh 'echo passed' stopped working
         //git branch: 'main', url: 'https://github.com/SaadTAhmad/Application-Repo.git'
       }
     }
