--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -8,6 +8,7 @@ pipeline {
   stages {
     stage('Checkout') {
       steps {   
+        checkout scm
         sh 'echo passed'
         //git branch: 'main', url: 'https://github.com/SaadTAhmad/Application-Repo.git'
       }
