--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,9 +1,14 @@
 pipeline {
   agent {
-    docker {
-      image 'saadtahmad/maven-java-docker:latest'
-      args ' --user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
+    docker.image('abhishekf5/maven-abhishek-docker-agent:v1')
+  .inside('-v /var/run/docker.sock:/var/run/docker.sock -w /workspace') {
+    sh '''
+      pwd
+      ls -l
+      cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
+      mvn clean package
+    '''
+}
   }
   stages {
     stage('Checkout') {
