--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,6 +1,6 @@
 pipeline {
   agent {
-    docker.image('abhishekf5/maven-abhishek-docker-agent:v1')
+    docker.image('saadtahmad/maven-java-docker')
   .inside('-v /var/run/docker.sock:/var/run/docker.sock -w /workspace') {
     sh '''
       pwd
