--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,6 +1,7 @@
 pipeline {
   agent {
-    docker.image('saadtahmad/maven-java-docker')
+    docker {
+      docker.image('abhishekf5/maven-abhishek-docker-agent:v1')
   .inside('-v /var/run/docker.sock:/var/run/docker.sock -w /workspace') {
     sh '''
       pwd
@@ -8,7 +9,8 @@ pipeline {
       cd java-maven-sonar-argocd-helm-k8s/spring-boot-app
       mvn clean package
     '''
-}
+    }
+  }
   }
   stages {
     stage('Checkout') {
