--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -6,6 +6,12 @@ pipeline {
     }
   }
   stages {
+    stage('Clean Workspace') {
+        steps {
+            sh 'sudo rm -rf java-maven-sonar-argocd-helm-k8s/spring-boot-app/target || true'
+            cleanWs()
+        }
+    }
     stage('Checkout') {
       steps {   
         sh 'echo passed'
