--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,7 +53,7 @@ pipeline {
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
-                    cd ${WORKSPACE}
+                    cd ${WORKSPACE}/.git
                     git config user.email "Saad21703@hotmail.com"
                     git config user.name "Saad Ahmad"
                     BUILD_NUMBER=${BUILD_NUMBER}
