--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
   agent {
     docker {
       image 'saadtahmad/maven-java-docker:latest'
-      args ' --user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+      args ' --user root -v /var/run/docker.sock:/var/run/docker.sock -v $WORKSPACE:$WORKSPACE' // mount Docker socket to access the host's Docker daemon
     }
   }
   stages {
