--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -54,6 +54,7 @@ pipeline {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
                     cd ${WORKSPACE}
+                    ls -ltr
                     git config user.email "Saad21703@hotmail.com"
                     git config user.name "Saad Ahmad"
                     BUILD_NUMBER=${BUILD_NUMBER}
